# ytresearch

./: .gitignore  README.md  SPEC.md  main.py  pyproject.toml
src/ytresearch/: analyzer.py  cli.py  database.py  tagger.py  types.py  youtube.py
src/ytresearch/media/: downloader.py  tagger.py
src/ytresearch/metadata/: analyzer.py  database.py  scraper.py
tests/: conftest.py  test_analyzer.py  test_database.py  test_downloader.py  test_scraper.py  test_tagger.py  test_youtube.py
